# lindera-ipadic-neologd-builder

./: .gitignore  CHANGES.md  Cargo.toml  LICENSE  Makefile  NOTICE.txt  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
