[package]
name = "lindera-ipadic-neologd-builder"
version = "0.2.0"
authors = ["Jun Ohtani <johtani@gmail.com>"]
edition = "2018"
description = "A Japanese dictionary builder based on IPADIC NEologd for Lindera."
homepage = "https://github.com/bayard-search/lindera-ipadic-neologd-builder"
repository = "https://github.com/bayard-search/lindera-ipadic-neologd-builder"
readme = "README.md"
keywords = ["tokenizer", "japanese", "morphological", "analyzer"]
categories = ["text-processing"]
license = "MIT"
exclude = ["mecab-ipadic", "lindera-ipadic-neologd", "lindera-ipadic-neologd-*.tar.bz2"]

[dependencies]
bincode = "1.2.1"
byteorder = "1.3.2"
clap = "2.33.0"
encoding = "0.2.33"
lindera-core = "0.2.0"
tantivy-fst = "0.2.1"

[[bin]]
name = "lindera-ipadic-neologd"
path = "src/main.rs"
