[package]
name = "lindera-ipadic-neologd-builder"
version = "0.1.4"
authors = [
    "Paul Masurel <paul.masurel@gmail.com>",
    "Minoru Osuka <minoru.osuka@gmail.com>",
    "Jun Ohtani <johtani@gmail.com>"
    ]
edition = "2018"
description = "A Japanese morphological dictionary builder for IPADIC NEologd."
homepage = "https://github.com/lindera-morphology/lindera-ipadic-neologd-builder"
repository = "https://github.com/lindera-morphology/lindera-ipadic-neologd-builder"
readme = "README.md"
keywords = ["japanese", "morphological", "dictionary", "builder", "neologd"]
categories = ["text-processing"]
license = "MIT"

[dependencies]
bincode = "1.2.1"
byteorder = "1.3.4"
clap = "2.33.0"
encoding = "0.2.33"
glob = "0.3.0"
lindera-core = "0.4.0"
lindera-fst = "0.1.0"

[[bin]]
name = "lindera-ipadic-neologd"
path = "src/main.rs"
