[package]
name = "lindera-ipadic-neologd-builder"
version = "0.8.0"
authors = [
    "Paul Masurel <paul.masurel@gmail.com>",
    "Minoru Osuka <minoru.osuka@gmail.com>",
    "Jun Ohtani <johtani@gmail.com>"
    ]
edition = "2018"
description = "A Japanese morphological dictionary builder for IPADIC NEologd."
homepage = "https://github.com/lindera-morphology/lindera-ipadic-neologd-builder"
repository = "https://github.com/lindera-morphology/lindera-ipadic-neologd-builder"
readme = "README.md"
keywords = ["japanese", "morphological", "dictionary", "builder", "neologd"]
categories = ["text-processing"]
license = "MIT"

[dependencies]
anyhow = "1.0"
bincode = "1.2"
byteorder = "1.4"
clap = "2.33"
encoding = "0.2"
glob = "0.3"
yada = "0.4"

lindera-core = "0.8.0"

[[bin]]
name = "lindera-ipadic-neologd"
path = "src/main.rs"
